--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
   "devDependencies": {
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/components/*.{js,jsx}",
+      "!<rootDir>/node_modules/"
+    ]
   }
 }
