--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   "jest": {
     "collectCoverageFrom": [
       "src/components/*.{js,jsx}",
-      "!<rootDir>/node_modules/"
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/src/index.js",
+      "!<rootDir>/src/serviceWorker.js"
     ]
   }
 }
